--- a/index.html
+++ b/index.html
@@ -53,35 +53,35 @@
           <div class="slider">
             <img
               class="slider-image"
-              src="News Images/Latest/All Page 29.11.2024_page-0001.jpg"
+              src="News Images/Latest/All Page 04.04.2025_page-0001.jpg"
             />
             <img
               class="slider-image"
-              src="News Images/Latest/All Page 29.11.2024_page-0002.jpg"
+              src="News Images/Latest/All Page 04.04.2025_page-0002.jpg"
             />
             <img
               class="slider-image"
-              src="News Images/Latest/All Page 29.11.2024_page-0003.jpg"
+              src="News Images/Latest/All Page 04.04.2025_page-0003.jpg"
             />
             <img
               class="slider-image"
-              src="News Images/Latest/All Page 29.11.2024_page-0004.jpg"
+              src="News Images/Latest/All Page 04.04.2025_page-0004.jpg"
             />
             <img
               class="slider-image"
-              src="News Images/Latest/All Page 29.11.2024_page-0005.jpg"
+              src="News Images/Latest/All Page 04.04.2025_page-0005.jpg"
             />
             <img
               class="slider-image"
-              src="News Images/Latest/All Page 29.11.2024_page-0006.jpg"
+              src="News Images/Latest/All Page 04.04.2025_page-0006.jpg"
             />
             <img
               class="slider-image"
-              src="News Images/Latest/All Page 29.11.2024_page-0007.jpg"
+              src="News Images/Latest/All Page 04.04.2025_page-0007.jpg"
             />
             <img
               class="slider-image"
-              src="News Images/Latest/All Page 29.11.2024_page-0008.jpg"
+              src="News Images/Latest/All Page 04.04.2025_page-0008.jpg"
             />
           </div>
           <!--Slider-end-->
@@ -92,7 +92,7 @@
       </div>
       <!--Image Container End-->
       <div class="download">
-        <a href="News Images/All Page 29.11.2024.pdf" target="_blank">
+        <a href="News Images/All Page 04.04.2025.pdf" target="_blank">
           <i id="download-icon" class="fa-solid fa-file-arrow-down"></i>
         </a>
       </div>
@@ -106,7 +106,7 @@
           <p class="address-line-1"><i id="location-icon" class="fa-solid fa-location-dot"></i>House No.62, Dr.RP Road Near Ganesh Mandir </p>
           <p class="address-line-2">Ganeshguri, Guwahati, Assam.</p>
           <p class="address-line-3">PIN-781006</p>
-          <p class="telephone"><i id="telephone-icon" class="fa-solid fa-phone"></i>0361-2235888</p>
+          <p class="telephone"><i id="telephone-icon" class="fa-solid fa-phone"></i>+91 7002285428</p>
           <p class="email"><i id="email-icon" class="fa-solid fa-envelope"></i>ganastambhanews@gmail.com</p>
           <p class="website"><i id="website-icon" class="fa-solid fa-globe"></i>www.ganastambha.in</p>
           </div>
